<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="personalInformationFormTitle">Please fill in your details -</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="TextViewTitleID">FormTitle</string>
    <string name="feedbackTitle">Please fill in your details -</string>
    <string name="app_name">LifeTag</string>
    <string name="feedbackName">Type your name here&#8230;</string>
    <!-- <string name="A_positive">A+</string>
	<string name="A_negative">A-</string>
	<string name="B_positive">B+</string>
	<string name="B_negative">B-</string>
	<string name="O_positive">O+</string>
	<string name="O_negative">O-</string>
	<string name="AB_positive">AB+</string>
	<string name="AB_negative">AB-</string> -->
	<string name="O">O</string>
	<string name="A">A</string>
	<string name="B">B</string>
	<string name="AB">AB</string>
	<string name="feedbackType">Blood Group</string>
	<string name="nricNumber">Please enter your NRIC Number here&#8230;</string>
	<string name="birthDateQuestion">You were born on</string>
	<string name="birthDate"/>
	
</resources>