<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

		<TextView
		    android:id="@+id/PersonalInformationViewTitle"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/personalInformationFormTitle"
		    android:textSize="10pt" >

		</TextView>

		<EditText
		    android:id="@+id/name"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:hint="@string/feedbackName"
		    android:imeOptions="actionDone"
		    android:inputType="textPersonName" >

		</EditText>
		<EditText
    		android:id="@+id/nricNo"
    		android:layout_height="wrap_content"
    		android:hint="@string/nricNumber"
    		android:layout_width="fill_parent"
    		android:imeOptions="actionDone">
		</EditText>
		<Spinner
    		android:id="@+id/SpinnerFeedbackType"
    		android:layout_height="wrap_content"
    		android:prompt="@string/feedbackType"
    		android:layout_width="fill_parent"
    		android:entries="@array/feedbacktypelist">
		</Spinner>
		
		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" >
		    
		    <TextView
		    android:id="@+id/birthDateQuestionID"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/birthDateQuestion"
		    android:textSize="10pt" >
			</TextView>
			
		    <TextView
		    android:id="@+id/birthDateID"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/birthDate"
		    android:textSize="10pt" >
			</TextView>
			
		</LinearLayout>
		
		
	</LinearLayout>
</ScrollView>
